<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_SERVER_PARAMETERINPUTARRAY" Id="{c2f87325-3eb9-4ad6-8205-1ae89677c6dd}">
    <Declaration><![CDATA[TYPE DUT_SERVER_PARAMETERINPUTARRAY :
STRUCT
	ParameterInput0: DUT_PARAMETER_INPUT;
	ParameterInput1: DUT_PARAMETER_INPUT;
	ParameterInput2: DUT_PARAMETER_INPUT;
	ParameterInput3: DUT_PARAMETER_INPUT;
	ParameterInput4: DUT_PARAMETER_INPUT;
	ParameterInput5: DUT_PARAMETER_INPUT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>